[package]
name = "thruster-rate-limit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
redis ={ version= "0.23.0", features = ["connection-manager", "tokio-comp"] }
thruster = { version = "1.3.3", features = ["hyper_server"] }
tokio = "1.28.1"