[package]
name = "thruster-rate-limit"
version = "0.1.0"
edition = "2021"
authors = ["Tronikel <contactdonatas@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A super simple rate limiting middleware for the thruster web framework"
repository = "https://github.com/Tronikelis/thruster-rate-limit"

[features]
redis_store = ["dep:redis"]

[dependencies]
async-trait = "0.1.68"
redis = { version = "0.23.0", features = [
    "connection-manager",
    "tokio-comp",
], optional = true }
thruster = { version = "1.3.3", features = ["hyper_server"] }
tokio = "1.28.2"
